<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegistrationActivity">

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:inputType="text"
            android:hint="@string/first_name_hint"
            android:layout_margin="@dimen/dimen_10"
            android:id="@+id/ed_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>

        <EditText
            android:inputType="text"
            android:hint="@string/last_name_hint"
            android:layout_margin="@dimen/dimen_10"
            android:id="@+id/ed_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>

        <EditText
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:layout_margin="@dimen/dimen_10"
            android:id="@+id/ed_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>

        <EditText
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:layout_margin="@dimen/dimen_10"
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>

        <ImageView
            android:id="@+id/iv_image_capture"
            android:src="@drawable/ic_image"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dimen_10"
            android:layout_width="@dimen/dimen_100"
            android:layout_height="@dimen/dimen_100">

        </ImageView>

        <Button
            android:id="@+id/btn_register"
            android:text="@string/register"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Button>

    </LinearLayout>

</RelativeLayout>